test/fail/var-parameters.grace
var name := object {}

name(object {})
